--- a/res/layout/xlistview_header.xml
+++ b/res/layout/xlistview_header.xml
@@ -45,18 +45,16 @@
             android:id="@+id/xlistview_header_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/xlistview_header_text"
+            android:layout_toLeftOf="@id/xlistview_header_text"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="-35dp"
             android:src="@drawable/xlistview_arrow" />
 
         <ProgressBar
             android:id="@+id/xlistview_header_progressbar"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_alignLeft="@id/xlistview_header_text"
+            android:layout_toLeftOf="@id/xlistview_header_text"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="-40dp"
             android:visibility="invisible" />
     </RelativeLayout>
 
